<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/menu_item_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/menu_item_action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="200"
        android:title="@string/menu_item_action_favorites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="300"
        android:title="@string/menu_item_action_about"
        app:showAsAction="never" />
</menu>