<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <GridLayout
        android:rowCount="1"
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_row="0"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_podcast_image"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:contentDescription="@string/widget_image_description" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:layout_column="1"
            android:layout_row="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_podcast_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:textSize="16sp"
                tools:text="@string/widget_title_tools_text" />

            <TextView
                android:id="@+id/tv_podcast_author"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_gravity="center|start"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                tools:text="@string/widget_author_tools_text" />
        </LinearLayout>


    </GridLayout>

    <FrameLayout
        android:id="@+id/player_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/podcast_list_item_card_margin"
        android:background="@color/background_color_player_layout" />
</LinearLayout>