<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChannelActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <android.support.v7.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_chevron_left_black_24dp"
        app:title="@string/podcast_list_item_title" />
        <FrameLayout
            android:id="@+id/player_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"  />

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:id="@+id/lc_media_container"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_channel_iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/podcast_list_item_margin"
            android:src="@drawable/ic_action_headphones" />
    <LinearLayout
        android:id="@+id/activity_channel_rate_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/podcast_list_item_margin"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/podcast_list_item_rb_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/colorAccent"
            tools:rating="@string/activity_channel_rating" />

        <TextView
            android:id="@+id/podcast_list_item_tv_votes"
            android:textColor="@color/colorSecondaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/podcast_list_item_tv_votes_tool_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/podcast_list_item_tv_title"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:layout_gravity="center"
        android:layout_margin="@dimen/podcast_list_item_margin"
        android:ellipsize="end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_channel_rate_container"

        tools:text="@string/podcast_list_item_title" />

    <TextView
        android:id="@+id/podcast_list_item_tv_date"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryText"
        android:layout_margin="@dimen/podcast_list_item_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/podcast_list_item_tv_title"
        tools:text="@string/podcast_list_item_tv_date_tool_text" />
    </LinearLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_shows_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>